style: fixes text overflow

--- a/src/components/ItemList/ItemList.module.css
+++ b/src/components/ItemList/ItemList.module.css
@@ -11,6 +11,10 @@
 }
 
 .itemList div h2 {
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    max-width: 200px;
     margin-bottom: 0.5rem;
 }
 
